--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "autoprefixer": "10.4.21",
     "next": "latest",
     "postcss": "8.5.6",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "tailwindcss": "4.1.11"
   },
   "license": "MIT",
