--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "start": "next start"
   },
   "dependencies": {
-    "autoprefixer": "10.4.21",
     "next": "latest",
-    "postcss": "8.5.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "4.1.11"
+    "react-dom": "18.2.0"
   },
   "license": "MIT",
-  "devDependencies": {}
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11"
+  }
 }
