--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.11",
     "autoprefixer": "^10.4.21",
+    "init": "^0.1.2",
+    "npx": "^10.2.2",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11"
   }
